@@ -133,6 +133,16 @@
         </td>
         <td valign="top" align="center">No</td>
       </tr>
+        <tr>
+            <td valign="top">encoding</td>
+            <td valign="top">Encoding of the resources being selected.
+                Required in practice if the encoding of the files being
+                selected is different from the default encoding of the JVM
+                where Ant is running.
+                Since Ant 1.9.0
+            </td>
+            <td valign="top" align="center">No</td>
+        </tr>
     </table>
 
     <p>Here is an example of how to use the Contains Selector:</p>
