@@ -18,19 +18,20 @@
 
 package org.apache.tools.ant.taskdefs;
 
-import java.io.ByteArrayOutputStream;
-import java.io.PrintStream;
+import java.io.*;
 
 import junit.framework.TestCase;
 
 import org.apache.tools.ant.DefaultLogger;
 import org.apache.tools.ant.Project;
+import org.apache.tools.ant.util.FileUtils;
 
 /**
  * Test Java-dependent parts of the Echo task.
  */
 public class EchoTest extends TestCase {
 
+    private File removeThis;
     /**
      * Create a new EchoTest.
      * @param name
@@ -50,7 +51,38 @@ public class EchoTest extends TestCase {
         echo.execute();
         assertEquals("[testLogBlankEcho] ", logger.lastLoggedMessage );
     }
- 
+
+    public void testLogUTF8Echo() {
+        Project p = new Project();
+        p.init();
+        EchoTestLogger logger = new EchoTestLogger();
+        p.addBuildListener(logger);
+        Echo echo = new Echo();
+        echo.setProject(p);
+        echo.setTaskName("testLogUTF8Echo");
+        echo.setMessage("\u00e4\u00a9");
+        removeThis = new File("abc.txt");
+        echo.setFile(removeThis);
+        echo.setEncoding("UTF-8");
+        echo.execute();
+        FileUtils fu = FileUtils.getFileUtils();
+        try {
+        String x = FileUtils.readFully(new InputStreamReader(new FileInputStream(removeThis), "UTF-8" ));
+            assertEquals(x,"\u00e4\u00a9");
+        } catch (Exception exc) {
+
+        }
+    }
+
+    public void tearDown() {
+        if (removeThis != null && removeThis.exists()) {
+            if (!removeThis.delete())
+            {
+                removeThis.deleteOnExit();
+            }
+        }
+    }
+
     private class EchoTestLogger extends DefaultLogger {
         String lastLoggedMessage;
         
