@@ -18,6 +18,8 @@ Changes that could break older environments:
 
  * Removing the Perforce Ant tasks replaced by tasks supplied by Perforce Inc.
 
+ * Setting the default encoding of StringResource to UTF-8 instead of null
+
 Fixed bugs:
 -----------
 
@@ -81,6 +83,10 @@ Fixed bugs:
    sizes differed by more than 2 GB.
    Bugzilla Report 54623
 
+ * Unable to encode properly into UTF-8 when the system property file.encoding is
+   set to ANSI_X3.4-1968.
+   Bugzilla Report 54606
+
 Other changes:
 --------------
 
@@ -123,6 +129,10 @@ Other changes:
 
  * add the possibility to suppress stdout in the sshexec task.
    Bugzilla Report 50270.
+
+ * add an encoding attribute to the contains selector.
+   This will be useful to use the contains selector if the encoding of the VM is different from the encoding
+   of the files being selected.
 
 Changes from Ant 1.8.3 TO Ant 1.8.4
 ===================================
